syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ebanking.testsystem";
option java_outer_classname = "TestSystemImpl";

package testsystem;

service Login{
	rpc sayLogin(LoginRequest) returns (LoginValidation){}
}

message LoginRequest{
	string username = 1;
	string password = 2;
}

message LoginValidation{
	string valid = 1;
}