syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ebanking.testsystem";
option java_outer_classname = "PaymentSystemImpl";

package testsystem;

service PaymentService{

	rpc sentPayment(stream BillPayment) returns (Status){}

}

message BillPayment{
	string bic = 1;
	string iban = 2;
	string payee = 3;
	string description = 4;
	double amount = 5;
}

message Status{
	string confirmation = 1;

}